mysql/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todonodejs
    name: frontend
  name: frontend
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: frontend
